fix z-index bug

--- a/css/main.scss
+++ b/css/main.scss
@@ -205,6 +205,7 @@ main {
         border: 1px solid black;
         border-radius: 10px;
         box-shadow: 2px 2px 3px 0px grey;
+        z-index: 1;
         
         & > * {
           width: fit-content;
